--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,6 @@ config/master.key
 config/settings.local.yml
 config/settings/*.local.yml
 config/environments/*.local.yml
+
+# Ignore JetBrains config folder
+.idea
