--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ise",
   "private": true,
   "dependencies": {
-    "malihu-custom-scrollbar-plugin": "^3.1.5"
+    "malihu-custom-scrollbar-plugin": "^3.1.5",
+    "noty": "^3.2.0-beta"
   }
 }
