--- a/config/settings.yml
+++ b/config/settings.yml
@@ -9,7 +9,11 @@ model:
   user:
     max_name_length: 30
     min_name_length: 3
-    start_dob_year: 1950
+    start_dob_year: 1930
+    year_interval: 70
+    phone_number:
+      minimum: 10
+      maximum: 15
   event:
     sorted_by:
       latest: latest
