--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1,8 +1,21 @@
+application:
+  title: FPT International Student Exchange
+  currency:
+    vnd:
+      format: "%n %u"
+      unit: VNĐ
+      precision: 0
 model:
   user:
     max_name_length: 30
     min_name_length: 3
     start_dob_year: 1950
+  event:
+    sorted_by:
+      lastest: lastest
+      most_popular: most_popular
+      enrolling_phase: enrolling_phase
+    per_page: 5
 assets:
   images:
     fpt_logo: fpt_logo.png
