Fix validate signup

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -35,3 +35,4 @@ date:
 regex:
   only_word: !ruby/regexp '/(\w|\s)/'
   word_with_number: !ruby/regexp '/(\w|\d|\s)/'
+  roll_number: !ruby/regexp '/[A-Z0-9]+/'
