improve logics, views and refactor code

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -15,7 +15,7 @@ model:
       maximum: 15
   event:
     sorted_by:
-      enrolling: enrolling
+      opening: opening
       latest: latest
       most_popular: most_popular
     per_page: 5
